--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register --recursive test/",
+    "test:watch": "mocha --compilers js:babel-register --recursive -w test/"
   },
   "author": "",
   "license": "ISC",
