--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-polyfill": "^6.13.0",
     "immutable": "^3.8.1",
     "react": "^15.3.0",
+    "react-addons-pure-render-mixin": "^15.3.1",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
