--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "test": "mocha --compilers js:babel-register --recursive test/",
     "test:watch": "mocha --compilers js:babel-register --recursive -w test/"
   },
